--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "vuepress-plugin-text-to-speech",
+  "version": "1.0.1",
+  "keywords": ["text-to-speech", "vuepress"],
   "author": {
     "name": "khang-nd",
     "email": "khang.nguyenduyvn@gmail.com"
@@ -8,7 +10,6 @@
     "type": "git",
     "url": "https://github.com/khang-nd/vuepress-plugin-text-to-speech"
   },
-  "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
