--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,6 @@ jobs:
           # on how to create and store an access token in case a new one is
           # ever needed
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn build
+          TARGET_BRANCH: docs
+          BUILD_SCRIPT: yarn build:docs
           BUILD_DIR: docs/src/.vuepress/dist
