--- a/docs/package.json
+++ b/docs/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "vuepress-plugin-text-to-speech-demo",
+  "name": "vuepress-plugin-text-to-speech-docs",
+  "main": "index.js",
   "scripts": {
     "dev": "vuepress dev src",
     "build": "vuepress build src"
   },
+  "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
   }
