--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "url": "https://github.com/khang-nd/vuepress-plugin-text-to-speech"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
+  },
+  "devDependencies": {
+    "vuepress": "^1.9.7"
+  }
 }
